bug fix - shrink search box on small screens

--- a/app/assets/stylesheets/navbar.css.less
+++ b/app/assets/stylesheets/navbar.css.less
@@ -259,7 +259,7 @@ header
       {
         &, &:focus, &:hover { width: 100%; }
       }
-      @media (max-width: 1050px) {
+      @media (max-width: 1120px) {
         &{
           width: 200px;
           min-width: inherit;
